--- a/app/scss/components/partners/about.scss
+++ b/app/scss/components/partners/about.scss
@@ -312,7 +312,7 @@
           }
 
           .date-btn.swiper-slide {
-            
+            width: auto;
             span{
               padding: 0 5px;
               display: inline-block;
