--- a/app/templates/pages/about.pug
+++ b/app/templates/pages/about.pug
@@ -72,7 +72,7 @@ block content
                 button.date-btn.swiper-slide 
                   span 1968
                 button.date-btn.swiper-slide 
-                  span 1979
+                  span 1970е-80е
                 button.date-btn.swiper-slide 
                   span 1988
                 button.date-btn.swiper-slide 
