--- a/app/scss/components/products/catalog.scss
+++ b/app/scss/components/products/catalog.scss
@@ -386,6 +386,7 @@
         @media(max-width: 850px){
           display: block;
           position: relative;
+          opacity: 1 !important;
           max-width: 400px;
           margin: 30px auto;
         }
