--- a/app/scss/base/svgSprite.scss
+++ b/app/scss/base/svgSprite.scss
@@ -8,7 +8,7 @@
     display: inline-block;
     background-image: url("../images/sprite.svg");
     background-repeat: no-repeat;
-    background-size: 40.3em 405.2em;
+    background-size: 40.3em 410em;
 }
 
 .no-svg .svg-icon:before {
@@ -242,8 +242,17 @@
 
 
 
-  .svg-icon.svg-img-catalog-product-1:before {
+  .svg-icon.svg-gray-yt:before {
       background-position: 0em -118.5em;
+      width: 2.4em;
+      height: 2.4em;
+  }
+
+
+
+
+  .svg-icon.svg-img-catalog-product-1:before {
+      background-position: 0em -120.9em;
       width: 6.4em;
       height: 6.5em;
   }
@@ -252,7 +261,7 @@
 
 
   .svg-icon.svg-img-catalog-product-4:before {
-      background-position: 0em -125em;
+      background-position: 0em -127.4em;
       width: 5.1em;
       height: 5em;
   }
@@ -261,7 +270,7 @@
 
 
   .svg-icon.svg-instagram:before {
-      background-position: 0em -130em;
+      background-position: 0em -132.4em;
       width: 1.8em;
       height: 1.8em;
   }
@@ -270,7 +279,7 @@
 
 
   .svg-icon.svg-location-color:before {
-      background-position: 0em -131.8em;
+      background-position: 0em -134.2em;
       width: 3.6em;
       height: 4.4em;
   }
@@ -279,7 +288,7 @@
 
 
   .svg-icon.svg-logotype:before {
-      background-position: 0em -136.2em;
+      background-position: 0em -138.6em;
       width: 15.1em;
       height: 9.6em;
   }
@@ -288,7 +297,7 @@
 
 
   .svg-icon.svg-logotype-short:before {
-      background-position: 0em -145.8em;
+      background-position: 0em -148.2em;
       width: 15.2em;
       height: 4.1em;
   }
@@ -297,7 +306,7 @@
 
 
   .svg-icon.svg-main-link-arrow:before {
-      background-position: 0em -149.9em;
+      background-position: 0em -152.3em;
       width: 1.3em;
       height: 0.8em;
   }
@@ -306,7 +315,7 @@
 
 
   .svg-icon.svg-main-link-plus:before {
-      background-position: 0em -150.7em;
+      background-position: 0em -153.1em;
       width: 1.2em;
       height: 1.2em;
   }
@@ -315,7 +324,7 @@
 
 
   .svg-icon.svg-medal-icon-1:before {
-      background-position: 0em -151.9em;
+      background-position: 0em -154.3em;
       width: 11.4em;
       height: 17em;
   }
@@ -324,7 +333,7 @@
 
 
   .svg-icon.svg-medal-icon-2:before {
-      background-position: 0em -168.9em;
+      background-position: 0em -171.3em;
       width: 11.4em;
       height: 17em;
   }
@@ -333,7 +342,7 @@
 
 
   .svg-icon.svg-medal-icon-3:before {
-      background-position: 0em -185.9em;
+      background-position: 0em -188.3em;
       width: 11.4em;
       height: 17em;
   }
@@ -342,7 +351,7 @@
 
 
   .svg-icon.svg-navigation:before {
-      background-position: 0em -202.9em;
+      background-position: 0em -205.3em;
       width: 7.9em;
       height: 7.8em;
   }
@@ -351,7 +360,7 @@
 
 
   .svg-icon.svg-ok:before {
-      background-position: 0em -210.7em;
+      background-position: 0em -213.1em;
       width: 1.4em;
       height: 2.4em;
   }
@@ -360,7 +369,7 @@
 
 
   .svg-icon.svg-pack:before {
-      background-position: 0em -213.1em;
+      background-position: 0em -215.5em;
       width: 40.3em;
       height: 24.2em;
   }
@@ -369,7 +378,7 @@
 
 
   .svg-icon.svg-pan:before {
-      background-position: 0em -237.3em;
+      background-position: 0em -239.7em;
       width: 14.8em;
       height: 6.6em;
   }
@@ -378,7 +387,7 @@
 
 
   .svg-icon.svg-paste:before {
-      background-position: 0em -243.9em;
+      background-position: 0em -246.3em;
       width: 9.5em;
       height: 6.1em;
   }
@@ -387,7 +396,7 @@
 
 
   .svg-icon.svg-presentation:before {
-      background-position: 0em -250em;
+      background-position: 0em -252.4em;
       width: 7.8em;
       height: 9.8em;
   }
@@ -396,7 +405,7 @@
 
 
   .svg-icon.svg-prevslogo:before {
-      background-position: 0em -259.8em;
+      background-position: 0em -262.2em;
       width: 24.2em;
       height: 24.3em;
   }
@@ -405,7 +414,7 @@
 
 
   .svg-icon.svg-print-main:before {
-      background-position: 0em -284.1em;
+      background-position: 0em -286.5em;
       width: 16.1em;
       height: 16.1em;
   }
@@ -414,7 +423,7 @@
 
 
   .svg-icon.svg-print-product:before {
-      background-position: 0em -300.2em;
+      background-position: 0em -302.6em;
       width: 19.4em;
       height: 19.4em;
   }
@@ -423,7 +432,7 @@
 
 
   .svg-icon.svg-printer:before {
-      background-position: 0em -319.6em;
+      background-position: 0em -322em;
       width: 2.1em;
       height: 1.9em;
   }
@@ -432,7 +441,7 @@
 
 
   .svg-icon.svg-promo-box-top-text:before {
-      background-position: 0em -321.5em;
+      background-position: 0em -323.9em;
       width: 23.2em;
       height: 13.4em;
   }
@@ -441,7 +450,7 @@
 
 
   .svg-icon.svg-recept-product-print:before {
-      background-position: 0em -334.9em;
+      background-position: 0em -337.3em;
       width: 11.5em;
       height: 11.2em;
   }
@@ -450,7 +459,7 @@
 
 
   .svg-icon.svg-rhombus:before {
-      background-position: 0em -346.1em;
+      background-position: 0em -348.5em;
       width: 13.6em;
       height: 13.4em;
   }
@@ -459,7 +468,7 @@
 
 
   .svg-icon.svg-salad:before {
-      background-position: 0em -359.5em;
+      background-position: 0em -361.9em;
       width: 9.6em;
       height: 7.9em;
   }
@@ -468,7 +477,7 @@
 
 
   .svg-icon.svg-shawarma:before {
-      background-position: 0em -367.4em;
+      background-position: 0em -369.8em;
       width: 9.6em;
       height: 5.3em;
   }
@@ -477,7 +486,7 @@
 
 
   .svg-icon.svg-srt-paper-plane:before {
-      background-position: 0em -372.7em;
+      background-position: 0em -375.1em;
       width: 2.8em;
       height: 2.8em;
   }
@@ -486,7 +495,7 @@
 
 
   .svg-icon.svg-statistics:before {
-      background-position: 0em -375.5em;
+      background-position: 0em -377.9em;
       width: 10.3em;
       height: 7em;
   }
@@ -495,7 +504,7 @@
 
 
   .svg-icon.svg-str-right-light-color:before {
-      background-position: 0em -382.5em;
+      background-position: 0em -384.9em;
       width: 4.3em;
       height: 2.3em;
   }
@@ -504,7 +513,7 @@
 
 
   .svg-icon.svg-str_down_orange:before {
-      background-position: 0em -384.8em;
+      background-position: 0em -387.2em;
       width: 2.3em;
       height: 1em;
   }
@@ -513,7 +522,7 @@
 
 
   .svg-icon.svg-timer:before {
-      background-position: 0em -385.8em;
+      background-position: 0em -388.2em;
       width: 3.3em;
       height: 3.3em;
   }
@@ -522,7 +531,7 @@
 
 
   .svg-icon.svg-twitter:before {
-      background-position: 0em -389.1em;
+      background-position: 0em -391.5em;
       width: 2em;
       height: 1.8em;
   }
@@ -531,7 +540,7 @@
 
 
   .svg-icon.svg-vk:before {
-      background-position: 0em -390.9em;
+      background-position: 0em -393.3em;
       width: 2.6em;
       height: 1.6em;
   }
@@ -540,7 +549,7 @@
 
 
   .svg-icon.svg-vote:before {
-      background-position: 0em -392.5em;
+      background-position: 0em -394.9em;
       width: 12.1em;
       height: 11em;
   }
@@ -549,9 +558,18 @@
 
 
   .svg-icon.svg-wikipedia:before {
-      background-position: 0em -403.5em;
+      background-position: 0em -405.9em;
       width: 2.8em;
       height: 1.7em;
+  }
+
+
+
+
+  .svg-icon.svg-youtube:before {
+      background-position: 0em -407.6em;
+      width: 2.4em;
+      height: 2.4em;
   }
 
 
