[UPDATE/DEPLOY] Правки

--- a/app/scss/components/products/product.scss
+++ b/app/scss/components/products/product.scss
@@ -361,6 +361,7 @@
             }
             thead {
               td {
+                font-family: "CeraPro";
                 font-style: normal;
                 font-weight: normal;
                 font-size: 14px;
@@ -378,7 +379,7 @@
                 }
               }
               td {
-                font-family: PFRegalTextPro;
+                font-family: "PFRegalTextPro";
                 font-style: normal;
                 font-weight: bold;
                 font-size: 16px;
