[UPDATE/DEPLOY/RESTRUCT]

--- a/app/scss/components/modal/main.scss
+++ b/app/scss/components/modal/main.scss
@@ -9,6 +9,12 @@
     z-index: -1;
     background: rgba(0, 0, 0, 0.26);
   }
+  &-content{
+    display: none;
+    &.active{
+      display: block;
+    }
+  }
   &.active {
     display: block;
     position: fixed!important;
