--- a/app/templates/modules/forms.pug
+++ b/app/templates/modules/forms.pug
@@ -92,7 +92,7 @@ mixin askQuestionFormModal
         +textarea('question', '29', '3', 'Ваш вопрос', 'необязательно')
         .main-checkbox
           input(type="checkbox" id='agreemodal' name='agree')
-          label(for='agree' class="main-checkbox-name")
+          label(for='agreemodal' class="main-checkbox-name")
             +icon('checkbox', 'svg').state-default
             +icon('checkbox-hover', 'svg').state-hover
             +icon('checkbox-checked', 'svg').state-checked
