--- a/app/templates/layouts/default.pug
+++ b/app/templates/layouts/default.pug
@@ -35,10 +35,15 @@ html(lang="ru")
             include ../modules/footer
         .modal
             .modal-bg
-            .modal-content
+            .modal-content#quest
                 a#controlModal
                     span
                 +askQuestionFormModal()
+            .modal-content#success
+                a#controlModal
+                    span
+                .contact-box-header
+                    h2 Мы вам перезвоним
         #scroll-box-events
         script(src='js/scripts.min.js')
         block scripts
