--- a/app/scss/components/products/products.scss
+++ b/app/scss/components/products/products.scss
@@ -483,7 +483,7 @@
       width: 100%;
       height: 100%;
       opacity: 0;
-
+      animation: none;
       @include screen("md", "max") {
         display: none;
       }
