--- a/app/templates/modules/header.pug
+++ b/app/templates/modules/header.pug
@@ -14,6 +14,7 @@ mixin right-group-link(json)
 mixin header
   .header
     .header-static.visual-animation-base-block-m
+      .header-bg
       .header-box
         a.header-box-logotype(href="/")
           +icon('logotype', 'svg')
