--- a/app/scss/modules/header.scss
+++ b/app/scss/modules/header.scss
@@ -220,6 +220,20 @@
       }
     }
 
+    .header-bg{
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      z-index: -1;
+      background-position: bottom center;
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-image: url(../images/burger-bg.png);
+    }
     .header-buttom {
       font-family: 'CeraPro';
       display: none;
@@ -230,20 +244,6 @@
       height: calc(100% - 10px);
       justify-content: space-around;
       padding-top: 66px;
-      &:before{
-        content: '';
-        display: block;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        z-index: -1;
-        background-position: bottom center;
-        background-repeat: no-repeat;
-        background-size: contain;
-        background-image: url(../images/burger-bg.png);
-      }
       &-nav {
         display: flex;
         justify-content: space-between;
