--- a/app/scss/components/index/main.scss
+++ b/app/scss/components/index/main.scss
@@ -109,6 +109,7 @@
           img {
             position: relative;
             top: 70px;
+            max-height: 450px;
           }
           
           .shadow {
