--- a/app/scss/components/modal/main.scss
+++ b/app/scss/components/modal/main.scss
@@ -13,6 +13,10 @@
     display: none;
     &.active{
       display: block;
+      &.center{
+        display: flex;
+        align-items: center;
+      }
     }
   }
   &.active {
