--- a/app/templates/layouts/default.pug
+++ b/app/templates/layouts/default.pug
@@ -39,11 +39,12 @@ html(lang="ru")
                 a#controlModal
                     span
                 +askQuestionFormModal()
-            .modal-content#success
+            .modal-content#success.center
                 a#controlModal
                     span
                 .contact-box-header
-                    h2 Мы вам перезвоним
+                    h3 Ваше сообщение успешно отправлено. Ответим вам, как только сможем.
+                    +buttonSubmit('Отправить еще')#askAgain
         #scroll-box-events
         script(src='js/scripts.min.js')
         block scripts
