--- a/app/templates/layouts/default.pug
+++ b/app/templates/layouts/default.pug
@@ -44,7 +44,7 @@ html(lang="ru")
                     span
                 .contact-box-header
                     h3 Ваше сообщение успешно отправлено. Ответим вам, как только сможем.
-                    +buttonSubmit('Отправить еще')#askAgain
+                    +buttonSubmit('Отправить еще','askAgain')
         #scroll-box-events
         script(src='js/scripts.min.js')
         block scripts
