--- a/app/templates/modules/forms.pug
+++ b/app/templates/modules/forms.pug
@@ -1,6 +1,6 @@
 //- 
-mixin buttonSubmit(name)
-  button.main-link(type="submit") #{name}
+mixin buttonSubmit(name,Did)
+  button.main-link(type="submit" id=Did) #{name}
     span.bottomLines
     span.morphPlus
 
