--- a/app/scss/components/index/main.scss
+++ b/app/scss/components/index/main.scss
@@ -109,7 +109,6 @@
           img {
             position: relative;
             top: 70px;
-            max-height: 450px;
           }
           
           .shadow {
@@ -121,9 +120,9 @@
               background-repeat: no-repeat;
               width: 100%;
               height: 120px;
-              bottom: -36%;
+              bottom: -60px;
               left: 50%;
-              transform: translateX(-38%);
+              transform: translate(-38%,100%);
             }
           }
 
