--- a/app/templates/layouts/default.pug
+++ b/app/templates/layouts/default.pug
@@ -31,8 +31,10 @@ html(lang="ru")
                 .img-front-container
                     .img-front
         .container.visual-animation-base-block-m
-            block content
-            include ../modules/footer
+            +header()
+            #scroll-content
+                block content
+                include ../modules/footer
         .modal
             .modal-bg
             .modal-content#quest
