--- a/app/scss/components/recepts/detail.scss
+++ b/app/scss/components/recepts/detail.scss
@@ -100,7 +100,7 @@
           position: relative;
           width: 100%;
           height: auto;
-          left: 9%;
+          left: 0;
           
           @include screen('md', 'max') {
             width: 80%;
