--- a/app/templates/pages/partners.pug
+++ b/app/templates/pages/partners.pug
@@ -44,7 +44,7 @@ block content
           p.visual-animation-base За 2019 год мы произвели:
         +info-box-el(getData('pages/partners/info-partners'))
         .info-box-details.visual-animation-base-block
-          a(href="#details") Скачать презентацию
+          a(href="#details").main-link Скачать презентацию
             span.bottomLines
     section.prevs
         .content.prevs-box
