--- a/app/scss/modules/header.scss
+++ b/app/scss/modules/header.scss
@@ -151,7 +151,21 @@
       }
     }
   } 
-
+  &-static{
+    .header-bg{
+      display: none;
+      width: 100%;
+      height: 100vh;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      background-position: bottom center;
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-image: url(../images/burger-bg.png);
+    }
+  }
   &-static.active {
     position: fixed;
     height: calc(100vh + 10px);
@@ -221,18 +235,7 @@
     }
 
     .header-bg{
-      content: '';
       display: block;
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      z-index: -1;
-      background-position: bottom center;
-      background-repeat: no-repeat;
-      background-size: contain;
-      background-image: url(../images/burger-bg.png);
     }
     .header-buttom {
       font-family: 'CeraPro';
