--- a/app/scss/components/elements/elements.scss
+++ b/app/scss/components/elements/elements.scss
@@ -452,6 +452,7 @@ canvas.how-do-dashed-bg4 {
   left: 0;
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   z-index: 9990;
   display: block;
   opacity: 1.0;
