--- a/app/scss/components/modal/askquestion.scss
+++ b/app/scss/components/modal/askquestion.scss
@@ -1,4 +1,5 @@
 .modal.active {
+  overflow: auto;
   .modal-content {
     position: relative;
     max-width: 700px;
@@ -7,7 +8,7 @@
     padding-right: 100px;
     padding-bottom: 80px;
     padding-top: 80px;
-    height: 100vh;
+    min-height: 100vh;
 
     @include screen('sm', 'max') {
       padding-left: 50px;
