--- a/app/templates/modules/header.pug
+++ b/app/templates/modules/header.pug
@@ -18,7 +18,7 @@ mixin header
       .header-box
         a.header-box-logotype(href="/")
           +icon('logotype', 'svg')
-          +icon('logotype-short', 'svg')
+          //-+icon('logotype-short', 'svg')
         button.header-box-nav-button#change-nav
           .burger
             span
