--- a/app/templates/modules/forms.pug
+++ b/app/templates/modules/forms.pug
@@ -49,7 +49,7 @@ mixin askQuestionForm
             .contact-box-form-el
               +buttonSubmit('Отправить')
           .contact-box-success
-            .contact-box-success-text Ваше сообщение успешно отправлено. Ответим вам, как только сможем.
+            .contact-box-success-text Ваше сообщение успешно отправлено. Ответим вам, в течение 15 минут.
             +buttonSubmit('Отправить еще')
 
 mixin contactUsForm
@@ -77,7 +77,7 @@ mixin contactUsForm
           .contact-box-form-el
             +buttonSubmit('Задать вопрос')
         .contact-box-success
-          .contact-box-success-text Ваше сообщение успешно отправлено. Ответим вам, как только сможем.
+          .contact-box-success-text Ваше сообщение успешно отправлено. Ответим вам, в течение 15 минут.
           +buttonSubmit('Отправить еще')
 
 mixin askQuestionFormModal
