--- a/app/scss/components/forms/subscribe.scss
+++ b/app/scss/components/forms/subscribe.scss
@@ -12,7 +12,7 @@ section {
 
 .subscription-box {
   position: relative;
-
+  background: inherit;
   &-success {
     position: absolute;
     left: 0;
@@ -22,7 +22,7 @@ section {
     opacity: 0;
     pointer-events: none;
     z-index: 2;
-    background: #fff;
+    background: inherit;
     transition: opacity .4s ease-in-out;
     display: flex;
     flex-direction: row;
